.k8s/prod/budgetme-backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budgetme-backend-depl
  namespace: budgetme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budgetme-backend-pod
  template:
    metadata:
      labels:
        app: budgetme-backend-pod
    spec:
      containers:
        - name: budgetme-backend
          image: 0.0.0.0:30001/budgetme-backend:#{RELEASE_VERSION}
          imagePullPolicy: Always
