.k8s/prod/budgetme-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgetme-backend-svc
spec:
  selector:
    app: budgetme-backend-pod
  ports:
    - name: budgetme-backend-tcp
      protocol: TCP
      port: 8001
      targetPort: 8001
