.k8s/prod/budgetme-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budgetme-backend-ingress
  namespace: budgetme
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: budgetme-backend.ordinarytechfolks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: budgetme-backend-svc
                port:
                  number: 80
  tls:
    - hosts: 
      - budgetme-backend.ordinarytechfolks.com
      secretName: otfs-tls
